--- a/src/app/modules/main/content/components/releases/components/release-create-edit/release-create-edit.component.html
+++ b/src/app/modules/main/content/components/releases/components/release-create-edit/release-create-edit.component.html
@@ -27,7 +27,7 @@
                             <div class="w-full text-lg">Client</div>
                             <div class="w-full text-xs text-gray-500">Please choose the client followed by respective project.</div>
                         </div>
-                        <div class="w-4/12">
+                        <div class="w-4/12 pl-6">
                             <!-- Client -->
                             <mat-form-field class="w-full" appearance="outline">
                                 <mat-label>Select Client</mat-label>
@@ -54,7 +54,7 @@
                             <div class="w-full text-lg">Project</div>
                             <div class="w-full text-xs text-gray-500">Select project against which release has to be created.</div>
                         </div>
-                        <div class="w-4/12">
+                        <div class="w-4/12 pl-6">
                             <!-- Project -->
                             <mat-form-field class="w-full" appearance="outline">
                                 <mat-label>Select Project</mat-label>
@@ -74,7 +74,7 @@
                             <div class="w-full text-lg">Release Details</div>
                             <div class="w-full text-xs text-gray-500">Enter all the required details and initiate the release. </div>
                         </div>
-                        <div class="w-4/12">
+                        <div class="w-4/12 pl-6">
                             <!-- Release Title -->
                             <mat-form-field class="w-full" appearance="outline">
                                 <mat-label>Release Title</mat-label>
