--- a/src/app/modules/main/content/components/releases/components/release-view/release-view.component.html
+++ b/src/app/modules/main/content/components/releases/components/release-view/release-view.component.html
@@ -84,6 +84,11 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Release Primary Details -->
+            <div class="w-full mt-4">
+                
+            </div>
         </div>
     </div>
 
