--- a/src/app/modules/main/content/components/releases/releases.component.html
+++ b/src/app/modules/main/content/components/releases/releases.component.html
@@ -39,9 +39,12 @@
                 </div>
 
                 <!-- No Release data illustration -->
-                <div class="w-full flex flex-wrap justify-center my-6" *ngIf="!releaseItems?.length">
+                <div class="w-full flex flex-wrap justify-center my-6" *ngIf="releaseItems?.length === 0">
                     <img src="assets/illustrations/empty.png" class="w-4/12">
-                    <div class="w-full py-4 text-gray-600 text-center">** No release items available. **</div>
+                    <div class="w-full py-4 text-gray-500 text-center">** No release items available. **</div>
+                    <div class="w-full flex justify-center">
+                        <button mat-stroked-button class="" color="primary" [routerLink]="['create']">Create New Release +</button>
+                    </div>
                 </div>
 
                 <!-- Loader -->
