--- a/src/app/modules/main/content/components/releases/components/release-view/release-view.component.html
+++ b/src/app/modules/main/content/components/releases/components/release-view/release-view.component.html
@@ -48,45 +48,64 @@
             <div class="w-full mt-4 border border-gray-200 rounded-lg p-4">
 
                 <!-- Title -->
-                <div class="w-full text-lg">Release basic details</div>
+                <div class="w-full text-lg">Basic Details</div>
 
-                <!-- Basic Details Content -->
-                <div class="w-full flex flex-wrap justify-between mt-4">
+                <!-- Basic Details Content Row 1-->
+                <div class="w-full flex flex-wrap justify-start mt-4">
 
-                    <!-- Client -->
-                    <div class="w-2/12">
-                        <div class="text-xs uppercase text-gray-600">Client</div>
-                        <div class="mt-1 hover:underline hover:text-blue-600 cursor-pointer w-fit" [routerLink]="['../../admin/members', releaseDetails.clientId]">{{filterRequiredIds('client', releaseDetails.clientId)}}</div>
-                    </div>
-
-                    <!-- Release Manager -->
-                    <div class="w-2/12">
+                    <!-- Release Owner -->
+                    <div class="w-3/12">
                         <div class="text-xs uppercase text-gray-600">Release Owner</div>
                         <div class="mt-1 hover:underline hover:text-blue-600 cursor-pointer w-fit" [routerLink]="['../../admin/members', releaseDetails.releaseOwnerId]">{{filterRequiredIds('member', releaseDetails.releaseOwnerId)}}</div>
                     </div>
 
                     <!-- Create On -->
-                    <div class="w-2/12">
-                        <div class="text-xs uppercase text-gray-600">Created On</div>
+                    <div class="w-3/12">
+                        <div class="text-xs uppercase text-gray-600">Release Created On</div>
                         <div class="mt-1">{{releaseDetails.releaseCreatedOnDate | date:'medium'}}</div>
                     </div>
 
                     <!-- Closing On -->
-                    <div class="w-2/12">
-                        <div class="text-xs uppercase text-gray-600">Closing On</div>
+                    <div class="w-3/12">
+                        <div class="text-xs uppercase text-gray-600">Release Closing On</div>
                         <div class="mt-1">{{releaseDetails.releaseClosingDate | date}}</div>
                     </div>
 
                     <!-- Create By -->
-                    <div class="w-2/12">
-                        <div class="text-xs uppercase text-gray-600">Created By</div>
+                    <div class="w-3/12">
+                        <div class="text-xs uppercase text-gray-600">Release Created By</div>
                         <div class="mt-1 hover:underline hover:text-blue-600 cursor-pointer w-fit" [routerLink]="['../../admin/members', releaseDetails.releaseCreatedById]">{{filterRequiredIds('member', releaseDetails.releaseCreatedById)}}</div>
+                    </div>
+                </div>
+
+                <!-- Basic Details Content Row 2-->
+                <div class="w-full flex flex-wrap justify-start mt-6">
+
+                    <!-- Client -->
+                    <div class="w-3/12">
+                        <div class="text-xs uppercase text-gray-600">Client</div>
+                        <div class="mt-1 hover:underline hover:text-blue-600 cursor-pointer w-fit" [routerLink]="['../../admin/members', releaseDetails.clientId]">{{filterRequiredIds('client', releaseDetails.clientId)}}</div>
+                    </div>
+
+                    <!-- Project Name -->
+                    <div class="w-3/12">
+                        <div class="text-xs uppercase text-gray-600">Project Name</div>
+                        <div class="mt-1 hover:underline hover:text-blue-600 cursor-pointer w-fit" [routerLink]="['../../projects', projectDetails._id]">{{projectDetails.projectName}}</div>
+                    </div>
+
+                    <!-- Project Manager -->
+                    <div class="w-3/12">
+                        <div class="text-xs uppercase text-gray-600">Project Manager</div>
+                        <div class="mt-1 hover:underline hover:text-blue-600 cursor-pointer w-fit" [routerLink]="['../../admin/members', projectDetails.projectManagerId]">{{filterRequiredIds('member', projectDetails.projectManagerId)}}</div>
                     </div>
                 </div>
             </div>
 
             <!-- Release Primary Details -->
-            <div class="w-full mt-4">
+            <div class="w-full mt-4 border border-gray-200 rounded-lg p-4">
+
+                <!-- Title -->
+                <div class="w-full text-lg">Advanced Details</div>
                 
             </div>
         </div>
