--- a/src/app/modules/main/content/components/releases/components/release-view/release-view.component.html
+++ b/src/app/modules/main/content/components/releases/components/release-view/release-view.component.html
@@ -101,11 +101,28 @@
                 </div>
             </div>
 
-            <!-- Release Primary Details -->
+            <!-- Release Advanced Details -->
             <div class="w-full mt-4 border border-gray-200 rounded-lg p-4">
 
                 <!-- Title -->
                 <div class="w-full text-lg">Advanced Details</div>
+
+                <!-- Advanced Details Cards -->
+                <div class="w-full flex flex-wrap justify-start items-stretch">
+                    <div class="w-6/12 p-2" *ngFor="let menu of advancedDetailsMenu">
+                        <div class="w-full flex items-center text-gray-800 border border-gray-200 rounded-lg p-4 cursor-pointer hover:border-blue-400 hover:text-blue-600 hover:font-bold">
+                            <div class="w-11/12">
+                                <div class="w-full">{{menu.title}}</div>
+                                <div class="w-full text-xs text-gray-400 mt-4 font-normal">{{menu.description}}</div>
+                            </div>
+                            <div class="w-1/12 flex justify-end">
+                                <button mat-icon-button class="" color="primary">
+                                    <mat-icon>keyboard_arrow_right</mat-icon>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 
             </div>
         </div>
