--- a/src/app/modules/main/content/components/admin/child-components/system-configurations/releases-configuration/releases-configuration.component.html
+++ b/src/app/modules/main/content/components/admin/child-components/system-configurations/releases-configuration/releases-configuration.component.html
@@ -2,16 +2,21 @@
 
     <!-- Title -->
     <div class="w-full">
-        <div class="text-xl px-2">Releases Configuration</div>
+        <div class="text-xl px-2">Release Configurations</div>
+        <div class="px-2 mt-2">
+            <span class="font-bold text-blue-600" [ngClass]="{'hover:cursor-pointer' : activeReleaseCategory}" (click)="activeReleaseCategory = ''; ">Categories</span> <span class="font-bold mx-1" *ngIf="activeReleaseCategory != '' "> > </span> <span class="font-bold text-gray-600" *ngIf="activeReleaseCategory != '' ">{{activeReleaseCategory}}</span>
+        </div>
     </div>
 
     <!-- Configuration block -->
-    <div class="w-full flex flex-wrap justify-start">
-        <div class="w-6/12 p-2" *ngFor="let variant of releaseVariants.releases">
-            <div class="w-full border border-gray-200 rounded-lg p-4">
-                <div class="text-xs text-gray-600">{{variant.category}}</div>
-                <div class="text-lg mt-2">{{variant.title}}</div>
-                <div class="w-full flex justify-end mt-4">
+    <div class="w-full flex flex-wrap justify-start mt-4">
+        <div class="w-6/12 p-2" *ngFor="let category of releaseCategories.releases">
+            <div class="w-full flex items-center border border-gray-200 rounded-lg p-4 cursor-pointer hover:text-blue-600 hover:border-gray-400 hover:font-bold"  (click)="activeReleaseCategory = category.title; ">
+                <div class="w-11/12">
+                    <div class="text-xs text-gray-600">{{category.type}}</div>
+                    <div class="mt-2">{{category.title}}</div>
+                </div>
+                <div class="w-1/12 flex justify-end">
                     <button mat-icon-button class="" color="primary">
                         <mat-icon>keyboard_arrow_right</mat-icon>
                     </button>
