--- a/src/app/modules/main/content/components/admin/child-components/system-configurations/releases-configuration/categories/basic/basic.component.html
+++ b/src/app/modules/main/content/components/admin/child-components/system-configurations/releases-configuration/categories/basic/basic.component.html
@@ -1,5 +1,5 @@
 <!-- Release Types Config Content -->
-<div class="w-full mt-6 pb-10 border-b border-gray-200">
+<div class="w-full p-4 border border-gray-200 rounded-lg">
     <div class="text-base">Release Types</div>
     <div class="text-gray-500 text-xs">Provides list options to set the type of release.</div>
 
@@ -9,11 +9,11 @@
             <input type="text" matInput placeholder="Add Release Type" #releaseTypeInput formControlName="types" >
         </mat-form-field>
 
-        <button mat-flat-button color="primary" class="!-mt-5 !ml-3" (click)="updateReleaseConfigBasicDetails('types')">+ Add</button>
-        <!-- <div class="flex items-center" *ngIf="releaseConfigTypeLoader">
+        <button mat-flat-button color="primary" class="!-mt-5 !ml-3" *ngIf="releaseConfigActionStatus === '' " (click)="updateReleaseConfigBasicDetails('types')">+ Add</button>
+        <div class="flex items-center" *ngIf="releaseConfigActionStatus === 'types' ">
             <mat-spinner [diameter]="20"></mat-spinner>
             <span class="ml-2">Adding...</span>
-        </div> -->
+        </div>
     </div>
 
     <div class="w-6/12 mt-3 border border-gray-200 rounded-md" *ngIf="releaseConfig?.types?.length">
@@ -21,7 +21,37 @@
             <div class="w-6/12">{{type.value}}</div>
             <div class="w-auto flex items-center">
                 <div class="rounded-full px-3 py-0.5 flex items-center text-xs" [ngClass]="getStatusStyle(type.status)">{{type.status}}</div>
-                <button mat-icon-button color="warn" class="!ml-3">
+                <button mat-icon-button color="warn" class="!ml-3" (click)="deleteReleaseConfigDetailsByTypeAndId('types', type._id)">
+                    <mat-icon>remove_circle_outline</mat-icon>
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Release Target Config Content -->
+<div class="w-full mt-4 p-4 border border-gray-200 rounded-lg">
+    <div class="text-base">Release Target</div>
+    <div class="text-gray-500 text-xs">Sets release target.</div>
+
+    <div class="w-6/12 flex items-center my-3" [formGroup]="releaseConfigBasicForm">
+        <mat-form-field class="w-9/12" appearance="outline">
+            <mat-label>Add Release Target</mat-label>
+            <input type="text" matInput placeholder="Add Release Type" #releaseTargetInput formControlName="targets" >
+        </mat-form-field>
+
+        <button mat-flat-button color="primary" class="!-mt-5 !ml-3" *ngIf="releaseConfigActionStatus === '' " (click)="updateReleaseConfigBasicDetails('targets')">+ Add</button>
+        <div class="flex items-center" *ngIf="releaseConfigActionStatus === 'targets' ">
+            <mat-spinner [diameter]="20"></mat-spinner>
+            <span class="ml-2">Adding...</span>
+        </div>
+    </div>
+
+    <div class="w-6/12 mt-3 border border-gray-200 rounded-md" *ngIf="releaseConfig?.targets.length">
+        <div class="w-full flex justify-between items-center py-1 px-3 border-b border-gray-200" *ngFor="let target of releaseConfig.targets">
+            <div class="w-6/12">{{target.value}}</div>
+            <div class="w-auto flex items-center">
+                <button mat-icon-button color="warn" class="!ml-3" (click)="deleteReleaseConfigDetailsByTypeAndId('targets', target._id)">
                     <mat-icon>remove_circle_outline</mat-icon>
                 </button>
             </div>
